--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Список GTIN:</label>
-                                <textarea class="form-control" oninput="onInputToTextArea(this)" onblur="onBlurTextArea(this)" rows=5 id="gtinList1"></textarea>
+                                <textarea class="form-control" onblur="onBlurTextArea(this)" rows=5 id="gtinList1"></textarea>
                             </div>
                         </div>
                         <div id="buttonsGroup">
